2010-02-07  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Add support for program symbol tables in MGSim.
	
	* build-aux/mgbinutils.m4: Also detect the `nm' utility.
	* tools/lib/Makefile.am: Propagate `nm' to `r-mt-sim.sh.in'.	
	* tools/lib/r-mt-sim.sh.in: Generate and pass program symbol table
	to simulator.

2010-02-05  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Expose initial place to programs.

	* lib/src/mtsep.c (sep_init): Initialize `__main_place_id' and
	`__main_placeinfo'.

2010-01-27  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug in `slr -m'.

	* tools/lib/r-mt-sim.sh.in: Fix handling of custom profiles in
	`~/.mt-profiles'.

2010-01-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Upgrade the mutc-ptl back-end.

	* tools/lib/host-host-ptl/include/create.tpl,
	* tools/lib/host-host-ptl/include/ptl_svp.h,
	* tools/lib/host-host-ptl/include/template.pl,
	* tools/lib/host-host-ptl/ptl_svp.cc: Update to latest utc-ptl
	code.

	* tools/lib/host-host-ptl/include/ptl_config.h,
	* tools/lib/host-host-ptl/include/ptl_debug.h,
	* tools/lib/host-host-ptl/include/ptl_deps.h,
	* tools/lib/host-host-ptl/include/ptl_svp.h,
	* tools/lib/host-host-ptl/include/ptl_vars.h,
	* tools/lib/host-host-ptl/include/template.pl,
	* tools/lib/host-host-ptl/ptl_debug.cc,
	* tools/lib/host-host-ptl/ptl_svp.cc,
	* tools/lib/host-host-ptl/ptl_vars.cc: Strip license text as it
	has not been decided yet.

2010-01-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix the MT profiles.

	* tools/lib/mt-profiles/coma128,
	* tools/lib/mt-profiles/coma256,
	* tools/lib/mt-profiles/ml-npcrypt-p1,
	* tools/lib/mt-profiles/ml-npcrypt-p2,
	* tools/lib/mt-profiles/ml-npcrypt-p4,
	* tools/lib/mt-profiles/ml-npcrypt-p8,
	* tools/lib/mt-profiles/rmb1,
	* tools/lib/mt-profiles/rmb128,
	* tools/lib/mt-profiles/rmb256,
	* tools/lib/mt-profiles/rmb4,
	* tools/lib/mt-profiles/rmb8: Use $simargs_base to define the
	number of cores since NCORES is not used any more.

2010-01-26  Raphael 'kena' Poss  <r.c.poss@uva.nl>
