@@ -28,6 +28,7 @@ if test -n "${SLR_RECURSIVE:-}"; then
   SIMPROFILE=simple
   simargs_base+=(-q)
   unset SLR_NCORES
+  unset coma_force
 fi
 
 found=
@@ -136,14 +137,16 @@ envfile=${SLR_RDIR:-${TMPDIR:-/tmp}}/$b.$$.envdata
 if test -n "${VERBOSE:-}"; then echo "$basename: dumping environment to: $envfile" >&2; fi
 $python -c "import os, sys; sys.stdout.write('\0'.join(('%s=%s' % x for x in os.environ.items()))+'\0'*8)" >"$envfile"
 
-symfile=${SLR_RDIR:-${TMPDIR:-/tmp}}/$b.$$.syms
-if test -n "${VERBOSE:-}"; then echo "$basename: dumping symbols to: $symfile" >&2; fi
-if test "x${nm[0]}" != xno; then
-  "${nm[@]}" -P "$program" >"$symfile"
-else
-  touch "$symfile"
+if test -z "${SLR_RECURSIVE:-}"; then
+    symfile=${SLR_RDIR:-${TMPDIR:-/tmp}}/$b.$$.syms
+    if test -n "${VERBOSE:-}"; then echo "$basename: dumping symbols to: $symfile" >&2; fi
+    if test "x${nm[0]}" != xno; then
+        "${nm[@]}" -P "$program" >"$symfile"
+    else
+        touch "$symfile"
+    fi
+    simargs_base+=(-s "$symfile")
 fi
-simargs_base+=(-s "$symfile")
 
 runner_cmdline=("${thesim[@]}" \
     ${simargs_base+"${simargs_base[@]}"} ${SIMARGS:-} \
